# kgproxy

./: .env.example  .gitignore  Implementation.md  Justfile  README.md  demo.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
app/: Cargo.toml  Dockerfile
app/migrations/: 0001_request_logs.sql
app/src/: cache.rs  cache_key.rs  circuit_breaker.rs  config.rs  http.rs  lib.rs  logging.rs  main.rs  metrics.rs  origin.rs  warmer.rs
app/tests/: redis_integration.rs
docs/: ci-cd-aws.md  deploy-aws.md  partial-components-roadmap.md  tls-nginx.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
nginx/conf.d/: default.conf  production.conf.example
scripts/: deploy-ec2.sh  e2e-smoke.sh  smoke-health.sh
